--- a/pom.xml
+++ b/pom.xml
@@ -11,22 +11,22 @@
 	<name>SparkKafkaBoot</name>
 	<description>Demo project for Spring Boot</description>
 
-	<parent>
+	<!--<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
+	</parent>-->
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.7</java.version>
-		<!--<spark-core.version>1.6.0-cdh5.7.3</spark-core.version>-->
-		<spark-core.version>2.1.0</spark-core.version>
+		<spark-core.version>1.6.0-cdh5.7.3</spark-core.version>
+		<!--<spark-core.version>2.1.0</spark-core.version>-->
 		<spark-streaming-kafka.version>1.6.3</spark-streaming-kafka.version>
-		<!--<kafka_2.10.version>0.10.0-kafka-2.1.0</kafka_2.10.version>-->
-		<kafka_2.10.version>0.10.2.0</kafka_2.10.version>
+		<kafka_2.10.version>0.10.0-kafka-2.1.0</kafka_2.10.version>
+		<!--<kafka_2.10.version>0.10.2.0</kafka_2.10.version>-->
 		<!-- The main class to start by executing java -jar -->
 		<start-class>com.example.KafkaConsumerTest</start-class>
 		<defaultScope>compile</defaultScope>
@@ -34,7 +34,7 @@
 
 	<dependencies>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 			<exclusions>
@@ -48,18 +48,18 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.11</artifactId>
+			<artifactId>spark-core_2.10</artifactId>
 			<version>${spark-core.version}</version>
 			<scope>${defaultScope}</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-streaming_2.11</artifactId>
+			<artifactId>spark-streaming_2.10</artifactId>
 			<version>${spark-core.version}</version>
 			<scope>${defaultScope}</scope>
 		</dependency>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-			<version>${spark-core.version}</version>
+			<version>2.1.0</version>
 			<!--<version>${spark-streaming-kafka.version}</version>-->
 		</dependency>
 
@@ -79,8 +79,14 @@
 
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.11</artifactId>
+			<artifactId>kafka_2.10</artifactId>
 			<version>${kafka_2.10.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-streams</artifactId>
+			<version>0.10.0.0</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.bazaarvoice.jolt/jolt-complete -->
@@ -93,27 +99,28 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
+			<version>3.0.2</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
 	<build>
 		<plugins>
-			<!--<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
-			</plugin>-->
+			</plugin>
 			<!-- "package" command plugin -->
 			<!--<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -136,7 +143,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>-->
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<dependencies>
@@ -188,7 +195,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>-->
 
 		</plugins>
 	</build>
@@ -202,11 +209,11 @@
 		</profile>
 	</profiles>
 
-	<!--<repositories>
+	<repositories>
 		<repository>
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
 		</repository>
-	</repositories>-->
+	</repositories>
 
 </project>
